[project]
name = "repomix"
version = "0.3.0"
description = "A tool for analyzing and summarizing code repositories"
authors = [{ name = "Anderson", email = "andersonby@163.com" }]
dependencies = [
    "questionary>=2.0.1",
    "chardet>=5.2.0",
    "pyperclip>=1.9.0",
    "tiktoken>=0.8.0",
    "detect-secrets>=1.5.0",
    "mcp>=1.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[project.scripts]
repomix = "repomix.cli:run"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = false
