[project]
name = "repomix"
version = "0.3.4"
description = "A tool for analyzing and summarizing code repositories"
authors = [{ name = "Anderson", email = "andersonby@163.com" }]
dependencies = [
    "questionary>=2.0.1",
    "chardet>=5.2.0",
    "pyperclip>=1.9.0",
    "tiktoken>=0.8.0",
    "detect-secrets>=1.5.0",
    "mcp>=1.2.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
# Release management
release = "python scripts/release-wizard.py"
collect-commits = "python scripts/collect-commits.py"
quick-release = "python scripts/release.py"

# Development shortcuts  
test = "python -m pytest"
lint = "ruff check ."
lint-fix = "ruff check --fix ."
typecheck = "pyright"
format = "ruff format ."

# Quality checks (run all)
check = [
    "test",
    "lint", 
    "typecheck"
]


[project.scripts]
repomix = "repomix.cli:run"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = false
# Disable reportArgumentType for tests that intentionally pass dicts to dataclass constructors
# to test __post_init__ conversion behavior
reportArgumentType = "warning"

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "I001",
    "UP035",
    "UP006",
    "UP045",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["repomix"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
